--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="https://idrs.github.io/kochflink/" />
 <meta property="og:site_name" content="Kochflink" />
 <meta property="og:type" content="website" />
-<link rel="stylesheet" href="/assets/main.css">
+<link rel="stylesheet" href="/kochflink/assets/main.css">
 </head>
 <body><header class="site-header" role="banner">
 
