--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     </head>
     <body><header class="site-header" role="banner">
 
-    <div class="wrapper">Kochflink Support Page<nav class="site-nav">
+    <h1 class="wrapper">Kochflink Support Page<nav class="site-nav">
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-            <label for="nav-trigger">
-            </label>
 
             <div class="trigger"></div>
-        </nav></div>
+        </nav></h1>
     </header>
     <main class="page-content" aria-label="Content">
         <div class="wrapper">
